# geometry

./: .gitignore  meson.build
include/geometry/: geometry-bidimensional.hpp  geometry-one.hpp  geometry-tridimensional.hpp  geometry-zero.hpp  geometry.hpp
subprojects/: eigen.wrap
tests/: basic.cpp  bidimensional.cpp  geometry-arbitrary.hpp  meson.build  tridimensional.cpp
